--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <img class="header__img" src="./assets/img/logo.svg" alt="">
+        <div class="header__container">
+            <h1 class="header__title">La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p class="header__parrafo">Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="#" class="header__boton">Conoce Nuestros Planes<span></span></a>
+        </div>
     </header>
     <main>
-        <section>
+        <section class="exchange">
+
         </section>
         <section>
 
