--- a/index.html
+++ b/index.html
@@ -151,9 +151,43 @@
             </section>
         
         </section>
-        <section>
 
+        <section class="product__detail--main">
+            <span class="product__detail--img"></span>
+            <div class="product__detail--info">
+                <h2 class="product__detail--title">Creamos un producto sin comparación.</h2>
+                <p class="product__detail--text">Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product__cards-container">
+
+                <div class="product__card">
+                    <span class="product__card--icon card__icon--clock"></span>
+                    <h3 class="product__card--title">Tiempo real</h3>
+                    <p class="product__card--text">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </div>
+
+                <div class="product__card">
+                    <span class="product__card--icon card__icon--eye"></span>
+                    <h3 class="product__card--title">No hay tasas escondidas</h3>
+                    <p class="product__card--text">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </div>
+
+                <div class="product__card">
+                    <span class="product__card--icon card__icon--currency"></span>
+                    <h3 class="product__card--title">Compara monedas</h3>
+                    <p class="product__card--text">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </div>
+
+                <div class="product__card">
+                    <span class="product__card--icon card__icon--check"></span>
+                    <h3 class="product__card--title">Información confiable</h3>
+                    <p class="product__card--text">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </div>
+
+
+            </section>
         </section>
+
         <section>
 
         </section>
