finishing batabit page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header__container">
             <h1 class="header__title">La próxima revolución en el intercambio de criptomonedas.</h1>
             <p class="header__parrafo">Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="#" class="header__boton">Conoce Nuestros Planes<span></span></a>
+            <a href="#plans" class="header__boton">Conoce Nuestros Planes<span></span></a>
         </div>
     </header>
     <main>
@@ -188,7 +188,53 @@
             </section>
         </section>
 
-        <section>
+        <section class="background__section">
+            <h2 class="background__section--title">Conócelo Hoy</h2>
+        </section>
+
+        <section class="plans__section--container">
+            <div class="plans__section--info">
+                <h2 class="plans__section--title">Escoge el plan que mejor se ajuste a ti</h2>
+                <p class="plans__section--text">Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+
+            <div class="plans__cards--container" id="plans">
+
+                <div class="plans__card card__one">
+                    <div class="plans__card-info">
+                        <h3 class="plans__card--subscription">Pago Anual</h3>
+                        <p class="plans__card--price"><span>$</span>99</p>
+                        <p class="plans__card--text">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans__card--button">
+                            Escoger este <span></span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="plans__card card__two">
+                    <p class="plans__card--featured">Destacado</p>
+                    <div class="plans__card-info">
+                        <h3 class="plans__card--subscription">Pago Anual</h3>
+                        <p class="plans__card--price"><span>$</span>99</p>
+                        <p class="plans__card--text">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans__card--button">
+                            Escoger este <span></span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="plans__card card__three">
+                    <div class="plans__card-info">
+                        <h3 class="plans__card--subscription">Pago Anual</h3>
+                        <p class="plans__card--price"><span>$</span>99</p>
+                        <p class="plans__card--text">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans__card--button">
+                            Escoger este <span></span>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
 
         </section>
     </main>
