--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="este es un test de prueba retomando">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/tablet.css" media="(min-width: 600px)">
 </head>
 <body>
     <header class="header">
@@ -238,8 +239,17 @@
 
         </section>
     </main>
-    <footer>
-
+    <footer >
+        <section class="footer__left">
+            <ul>
+                <li><a href="https://fabiotriana.com" target="_blank">Linkeding</a></li>
+                <li><a href="https://fabiotriana.com" target="_blank">Crunchbase</a></li>
+                <li><a href="https://fabiotriana.com" target="_blank">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="footer__right">
+            <img src="./assets/img/logo-footer.svg" alt="logo batabit 2020">
+        </section>
     </footer>
 </body>
 </html>
