--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="contenedor">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
+    <div class="div__container">
+        <div class="contenedor">
+            <div class="item item1">
+                <div class="item__inside inside"></div>
+            </div>
+            <div class="item item2">
+                <div class="item__inside inside"></div>
+            </div>
+            <div class="item item3">
+                <div class="item__inside inside"></div>
+            </div>
+            <div class="item item4">
+                <div class="item__inside inside"></div>
+            </div>
     </div>
+
 </body>
 </html>
