finalizando repaso grid basico

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <div class="div__container">
-        <div class="contenedor">
-            <div class="item item1">
-                <div class="item__inside inside"></div>
-            </div>
-            <div class="item item2">
-                <div class="item__inside inside"></div>
-            </div>
-            <div class="item item3">
-                <div class="item__inside inside"></div>
-            </div>
-            <div class="item item4">
-                <div class="item__inside inside"></div>
-            </div>
+        <div class="contenedor contenedor--autofit">
+            <div class="item item1">1</div>
+            <div class="item item2">2</div>
+            <div class="item item3">3 33 333 3333 33 3 3 3 33333 33 333 3 3 3 33333 33 333</div>
+            <div class="item item4">4 44 4444 44 44 4 44 444 4 444 4 444 4 4 444 4</div>
+        </div>
+
+        <div class="contenedor contenedor--autofill">
+            <div class="item item1">1</div>
+            <div class="item item2">2</div>
+            <div class="item item3">5 55 555 5555 55 5 5 5 55555 55 555 5 5 5 55555 55 555</div>
+            <div class="item item4">6v 6v6v 6v6v6v6v 6v6v 6v6v 6v 6v6v 6v6v6v 6v 6v6v6v 6v 6v6v6v 6v 6v 6v6v6v 6v</div>
+        </div>
     </div>
 
 </body>
