iniciando proyecto Yardsale

--- a/index.html
+++ b/index.html
@@ -3,54 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Restaurante</title>
-    <meta name="description" content="Este es un menú para un restaurante">
+    <title>Yardsale</title>
     <meta name="robots" content="noindex,nofollow">
+    <meta name="description" content="Meta description">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./tablet.css" media="screen and (min-width: 700px)">
-    <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 1000px)">
-</head>    
+    <link rel="stylesheet" href="./tablet.css" media="screen and (min-width:700px)">
+    <link rel="stylesheet" href="./desktop.css" media="screen and (min-width:1000px)">
+</head>
 <body>
-    <section class="hero">
-        <div class="hero__text">
-            <div class="hero__text--title">Check the best food</div>
-            <div class="hero__text--text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, minima?</div>
-            <div class="hero__text--button">Book a Table</div>
-        </div>
-        <img src="./img/hero.png" alt="plato hero" class="hero__img">
-    </section>
-    <main class="main">
-        <h2 class="main__title">
-            Our Services
-        </h2>
-        <div class="main__dishes--container">
-            <img src="./img/video.png" alt="una mesa con plato de pasta" class="main__dishes main__dishes--video">
-            <img src="./img/dish1.png" alt="" class="main__dishes">
-            <img src="./img/dish2.png" alt="" class="main__dishes">  
-            <img src="./img/dish3.png" alt="" class="main__dishes">
-            <img src="./img/dish4.png" alt="" class="main__dishes">
-        </div>
-
-        <h2 class="main__title main__title--menu">Home Menu</h2>
-        <div class="main__menu--container">
-            <div class="menu__dishes--container">
-                <img src="./img/plate1.png" alt="" class="menu__dishes--img">
-            </div>
-            <div class="menu__dishes--container">
-                <img src="./img/plate2.png" alt="" class="menu__dishes--img">
-            </div>
-            <div class="menu__dishes--container">
-                <img src="./img/plate3.png" alt="" class="menu__dishes--img">
-            </div>
-            <div class="menu__dishes--container">
-                <img src="./img/plate4.png" alt="" class="menu__dishes--img">
-            </div>
-            <div class="menu__dishes--container">
-                <img src="./img/plate5.png" alt="" class="menu__dishes--img">
-            </div>
-        </div>
-    </main>
-
-
+    
 </body>
 </html>
