--- a/newpassword.html
+++ b/newpassword.html
@@ -6,7 +6,7 @@
     <title>New Password - Yardsale</title>
     <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="meta description">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="./assets/styles/tablet.css" media="screen and (min-width:700px)">
     <link rel="stylesheet" href="./assets/styles/desktop.css" media="screen and (min-width:1000px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,17 +14,17 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="login">
+    <div class="wrapple login">
         <div class="form__container">
-            <img src="" alt="" class="form__logo">
+            <img src="./assets/logos/logo_yard_sale.svg" alt="" class="form__logo">
             <h1 class="form__title">Create a new password</h1>
             <p class="form__subtitle">Enter a new password for your account</p>
             <form action="" class="form">
-                <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="*********" class="input input__password">
-                <label for="new-password" class="label">Password</label>
-                <input type="password" id="new-password" placeholder="*********" class="input input__password">
-                <input type="submit" value="Confirm" class="form__button form__button--primary">
+                <label for="password" class="form__label">Password</label>
+                <input type="password" id="password" placeholder="*********" class="form__input input__password">
+                <label for="new-password" class="form__label">Password</label>
+                <input type="password" id="new-password" placeholder="*********" class="form__input input__password">
+                <input type="submit" value="Confirm" class="form__input form__button form__button--primary">
             </form>
         </div>
     </div>
