--- a/newpassword.html
+++ b/newpassword.html
@@ -7,8 +7,7 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="meta description">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="./assets/styles/tablet.css" media="screen and (min-width:700px)">
-    <link rel="stylesheet" href="./assets/styles/desktop.css" media="screen and (min-width:1000px)">
+    <link rel="stylesheet" href="./assets/styles/newpassword.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
@@ -24,7 +23,7 @@
                 <input type="password" id="password" placeholder="*********" class="form__input input__password">
                 <label for="new-password" class="form__label">Password</label>
                 <input type="password" id="new-password" placeholder="*********" class="form__input input__password">
-                <input type="submit" value="Confirm" class="form__input form__button form__button--primary">
+                <input type="submit" value="Confirm" class="button button__primary">
             </form>
         </div>
     </div>
