--- a/emailsend.html
+++ b/emailsend.html
@@ -23,7 +23,7 @@
             </figure>
             <div class="form">
                 <input type="submit" value="Login" class="button button__primary">
-                <span class="form__message">Didn't receive the email <a href="#">Resend</a></span>
+                <span class="form__action">Didn't receive the email <a href="#">Resend</a></span>
             </div>
 
         </div>
