finishing account design

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 <span class="form__action"><a href="#">Forgot my Password</a></span>
             </form>
 
-            <input type="submit" value="Sign up" class="button button__secondary button__secondary--login">
+            <input type="submit" value="Sign up" class="button button__secondary button--mobile">
         </div>
     </div>
 </body>
