--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home - Yardsale</title>
 <meta name="robots" content="noindex,nofollow">
-<meta name="description" content="My account">
+<meta name="description" content="Home">
 <link rel="stylesheet" href="./assets/styles/style.css">
 <link rel="stylesheet" href="./assets/styles/home.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
