starting my orders page and adding meta tag charset to some html files

--- a/myorders.html
+++ b/myorders.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu PC - Yardsale</title>
+    <title>My orders - Yardsale</title>
     <meta name="robots" content="noindex,nofollow">
-    <meta name="description" content="Menu PC">
+    <meta name="description" content="My orders page">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="./assets/styles/menupc.css">
+    <link rel="stylesheet" href="./assets/styles/myorders.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-</head>
+</head> 
 <body>
-    <div class="desktop__menu">
-        <ul>
-            <li><a href="#" class="title">My orders</a></li>
-            <li><a href="#" class="title">My account</a></li>
-            <li><a href="#" class="title">Sign out</a></li>
-        </ul>
-    </div>
+ 
 </body>
 </html>
