--- a/myorders.html
+++ b/myorders.html
@@ -13,6 +13,105 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head> 
 <body>
- 
+    <div class="order">
+        <div class="orders__container">
+           <h1 class="orders__title">My orders</h1>
+
+            <div class="item__container orders__card--container">
+                
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+                <div class="order__card">
+                    <div class="order__info">
+                        <span class="order__date">11.29.23</span>
+                        <span class="order__articles">6 articles</span>
+                    </div>
+                    <span class="order__total">$560,00</span>
+                    <img src="./assets/iconos/flechita.svg" alt="icono flecha derecha" class="order__icon">
+                </div>
+
+            </div>
+        
+        </div>
+    </div>
 </body>
 </html>
